force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/GFW_Sync_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps GFW fields to FSDB fields.</description>
    <label>GFW Sync Field Mapping</label>
    <pluralLabel>GFW Sync Field Mappings</pluralLabel>
</CustomObject>