force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <description>Use value if null or no field specified.</description>
    <label>DefaultValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>