force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/fields/FSDB_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>FSDB_Field_API_Name__c</fullName>
    <description>API name of field on FSDB target side.</description>
    <label>FSDB Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>