force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/fields/GFW_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>GFW_Field_API_Name__c</fullName>
    <description>API name of GFW source field</description>
    <label>GFW Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>