force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/fields/GFW_Sync_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>GFW_Sync_Object_Mapping__c</fullName>
    <description>Object mapping that controls these field mappings</description>
    <label>GFW Sync Object Mapping</label>
    <referenceTo>GFW_Sync_Object_Mapping__mdt</referenceTo>
    <relationshipLabel>GFW Sync Field Mappings</relationshipLabel>
    <relationshipName>GFW_Sync_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>