force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/fields/LookupRelTo_SyncObjectMapping__c.field-meta.xml
<CustomField>
    <fullName>LookupRelTo_SyncObjectMapping__c</fullName>
    <description>Custom Metadata Type SyncObjectMapping to which this field mapping has a Reference type (lookup) relationship. Used to retrieve External Id in that lookup object for linking.</description>
    <label>LookupRelTo SyncObjectMapping</label>
    <referenceTo>GFW_Sync_Object_Mapping__mdt</referenceTo>
    <relationshipLabel>GFW Sync Field Mappings (LookupRelTo SyncObjectMapping)</relationshipLabel>
    <relationshipName>GFW_Sync_Field_Mappings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>