force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Internal notes about this field mapping.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>