force-app/main/default/objects/GFW_Sync_Field_Mapping__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <description>Indicates if the field from the GFW side must contain a value; otherwise errors out.</description>
    <label>Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>